# s3load

./: .gitignore  README.md  pyproject.toml
s3load/: __init__.py  __main__.py
src/s3load/: __init__.py  __main__.py  upload.py
